# codeflow-agent

./: .env.example  .gitignore  CLI_DESIGN.md  LICENSE  PROJECT_OVERVIEW.md  README.md  ROADMAP.md  clean.bat  clean.ps1  clean.py  pyproject.toml  requirements.txt
.qwen/: settings.json  settings.json.orig
codeflow/: .env.example  __init__.py  __main__.py  cli.py  onboard.py  onboarding.py
codeflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
codeflow/agents/: __init__.py  architect.py  base.py  developer.py  devops.py  monitor.py  planner.py  qa.py  refactor.py  reviewer.py
codeflow/agents/architect/: __init__.py  agent.py
codeflow/agents/developer/: __init__.py  agent.py
codeflow/agents/devops/: __init__.py  agent.py
codeflow/agents/monitor/: __init__.py  agent.py
codeflow/agents/planner/: __init__.py  agent.py
codeflow/agents/qa/: __init__.py  agent.py
codeflow/agents/refactor/: __init__.py  agent.py
codeflow/agents/reviewer/: __init__.py  agent.py
codeflow/config/: __init__.py  global_config.py  settings.py
codeflow/core/: __init__.py  code_smell_detector.py  diff_protocol.py  knowledge_graph.py  persistence.py  sandbox.py  tree_sitter_parser.py
codeflow/docs/: USAGE.md
codeflow/models/: __init__.py  entities.py
codeflow/orchestrator/: __init__.py  consensus_loop.py  debate_context.py  workflow.py
codeflow/protocols/: __init__.py  critique.py
tests/: __init__.py  conftest.py  test_consensus_loop.py  test_diff_protocol.py  test_knowledge_graph.py  test_models.py  test_sandbox.py  test_tree_sitter_parser.py
