[project]
name = "codeflow"
version = "0.1.0"
description = "Autonomous Development Workflow Orchestrator"
requires-python = ">=3.10"

[project.scripts]
codeflow = "codeflow.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async",
    "integration: marks integration tests",
]
